# trojan-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
assets/: dashboard.html
config/: camouflage.html  client.toml  forward.toml  server-reality.toml  server.toml
docs/: networking_knowledge.md  tls-fingerprint-regression.md
docs/network_concepts/: async_network_model.md  authentication_crypto.md  cdn_tunnelling.md  http_fallback.md  multiplexing.md  proxy_protocols.md  tcp_udp_relay.md  tls_handshake.md  traffic_obfuscation.md  websocket.md
scripts/: install.sh  musl-rustc-wrapper.sh  test-install.sh
src/: main.rs
src/error/: mod.rs
src/protocol/: address.rs  camouflage.rs  fallback.rs  mod.rs  singbox_mux.rs
src/protocol/direct/: mod.rs
src/protocol/mux/: acceptor.rs  mod.rs
src/protocol/reality/: acceptor.rs  cert.rs  client_hello.rs  config.rs  crypto.rs  mod.rs
src/protocol/socks5/: acceptor.rs  mod.rs
src/protocol/tls/: acceptor.rs  connector.rs  mod.rs
src/protocol/trojan/: acceptor.rs  connector.rs  mod.rs
src/protocol/vless/: acceptor.rs  mod.rs  mux_cool.rs
src/protocol/websocket/: acceptor.rs  connector.rs  mod.rs
src/proxy/: config.rs  dashboard.html  meter.rs  metrics.rs  mod.rs  relay.rs
