[package]
name = "trojan-rs"
version = "1.0.0"
authors = ["Page Fault <p4gefau1t@gmail.com>"]
edition = "2021"

[dependencies]
bytes = "1.11"
tokio = {version = "1.40", features = ["rt", "net", "io-util", "rt-multi-thread", "sync", "macros"]}
tokio-rustls = { version = "0.25", features = ["ring"] }
rustls-pki-types = "1.14"
rustls-pemfile = "2.2"
log = "0.4"
async-trait = "0.1"
sha2 = "0.11"
serde = { version = "1.0", features = ["derive"] } 
env_logger = "0.11"
toml = "1.1"
clap = "4.5"
webpki-roots = "1.0"
tokio-tungstenite = "0.29"
futures-core = "0.3"
futures-util = "0.3"

[profile.release]
lto = true

[features]
default = ["full"]
client = []
server = []
forward = []
full = ["client", "server", "forward"]

[patch.crates-io]
rustls = { path = "vendor/rustls-craftls" }
