[package]
name = "trojan-rs"
version = "1.2.4"
authors = ["Page Fault <p4gefau1t@gmail.com>"]
edition = "2021"

[dependencies]
bytes = "1.11"
tokio = {version = "1.40", features = ["rt", "net", "io-util", "rt-multi-thread", "sync", "macros", "time"]}
boring = "5.1"
tokio-boring = "5.0"
log = "0.4"
async-trait = "0.1"
sha2 = "0.11"
serde = { version = "1.0", features = ["derive"] } 
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context"] }
webpki-root-certs = "1.0"
tokio-tungstenite = "0.29"
futures-core = "0.3"
futures-util = "0.3"
httparse = "1.4"
uuid = { version = "1.18", default-features = false }
httpdate = "1.0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[features]
default = ["full"]
client = []
server = []
forward = []
full = ["client", "server", "forward"]
